Break up long lines in the footer <dd>s

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3695,6 +3695,10 @@ input, select, textarea {
 			text-align: center;
 		}
 
+    #footer dd {
+      overflow-wrap: anywhere;
+    }
+
 		@media screen and (max-width: 1280px) {
 
 			#footer {
